--- a/Site/calculadora.html
+++ b/Site/calculadora.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/styleCalculadora.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="styleCalculadora.css">
+    <link rel="stylesheet" href="style.css">
     <title>ONDO</title>
 </head>
 
