--- a/Site/calculadora.html
+++ b/Site/calculadora.html
@@ -21,9 +21,9 @@
           <ul class="navbar_lista">
             <li><a href="#">Sobre nós</a></li>
   
-            <li><a href="#">Nossa missão</a></li>
+            <li><a href="./missao.html">Nossa missão</a></li>
   
-            <li><a href="#">Nosso projeto</a></li>
+            <li><a href="./projeto.html">Nosso projeto</a></li>
   
             <li><a href="#">Contato</a></li>
           </ul>
