--- a/Site/projeto.html
+++ b/Site/projeto.html
@@ -19,13 +19,13 @@
             <img src="assets/img/Logo.svg" alt="Logo" />
           </a>
         </div>
-
+        
         <ul class="navbar_lista">
           <li><a href="#">Sobre nós</a></li>
 
-          <li><a href="#">Nossa missão</a></li>
+          <li><a href="./missao.html">Nossa missão</a></li>
 
-          <li><a href="#">Nosso projeto</a></li>
+          <li><a href="./projeto.html">Nosso projeto</a></li>
 
           <li><a href="#">Contato</a></li>
         </ul>
