--- a/Site/menu.html
+++ b/Site/menu.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Fix</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Menu</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/css/MenuNav.css">
 </head>
+
 <body>
-    <header>
-        <nav class="navbar">
-          <div class="navbar_container-logo">
-            <a href="#">
-              <img src="assets/img/Logo.svg" alt="Logo" />
-            </a>
-          </div>
-  
-          <ul class="navbar_lista">
-            <li><a href="#">Sobre nós</a></li>
-  
-            <li><a href="./missao.html">Nossa missão</a></li>
-  
-            <li><a href="./projeto.html">Nosso projeto</a></li>
-  
-            <li><a href="#">Contato</a></li>
-          </ul>
-  
-          <div class="navbar_container-redesSociais">
-            <img src="assets/img/linkedin.svg" alt="Logo linkedin" />
-  
-            <img src="assets/img/twitter.svg" alt="X" />
-  
-            <img src="assets/img/youtube.svg" alt="Youtube" />
-          </div>
-        </nav>
-  
-        <div class="banner">
-            <!-- alterar imagem -->
-          <img src="assets/img/Imagem principal.svg" alt="" /> 
-        </div>
-    </header>
+  <header>
+    <nav class="navbar">
+      <div class="navbar_container-logo">
+        <a href="#">
+          <img src="assets/img/Logo.svg" alt="Logo" />
+        </a>
+      </div>
+
+      <ul class="navbar_lista">
+        <li><a href="#">Sobre nós</a></li>
+
+        <li><a href="./missao.html">Nossa missão</a></li>
+
+        <li><a href="./projeto.html">Nosso projeto</a></li>
+
+        <li><a href="#">Contato</a></li>
+      </ul>
+
+      <div class="navbar_container-redesSociais">
+        <img src="assets/img/linkedin.svg" alt="Logo linkedin" />
+
+        <img src="assets/img/twitter.svg" alt="X" />
+
+        <img src="assets/img/youtube.svg" alt="Youtube" />
+      </div>
+    </nav>
+
+    <div class="banner">
+      <img src="assets/img/Imagem principal.svg" alt="" />
+    </div>
+  </header>
 </body>
+
 </html>
