--- a/Site/projeto.html
+++ b/Site/projeto.html
@@ -9,6 +9,8 @@
     <title>Como funciona o projeto</title>
 
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/MenuNav.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
   </head>
 
   <body>
