ajustando link css

--- a/Site/menu.html
+++ b/Site/menu.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menu</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/MenuNav.css">
 </head>
 
@@ -13,19 +13,19 @@
   <header>
     <nav class="navbar">
       <div class="navbar_container-logo">
-        <a href="#">
+        <a href="index.html">
           <img src="assets/img/Logo.svg" alt="Logo" />
         </a>
       </div>
 
       <ul class="navbar_lista">
-        <li><a href="#">Sobre nós</a></li>
+        <li><a href="sobrenos.html">Sobre nós</a></li>
 
         <li><a href="./missao.html">Nossa missão</a></li>
 
         <li><a href="./projeto.html">Nosso projeto</a></li>
 
-        <li><a href="#">Contato</a></li>
+        <li><a href="contato.html">Contato</a></li>
       </ul>
 
       <div class="navbar_container-redesSociais">
