--- a/Site/projeto.html
+++ b/Site/projeto.html
@@ -8,7 +8,7 @@
 
     <title>Como funciona o projeto</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/MenuNav.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
   </head>
@@ -17,26 +17,26 @@
     <header>
       <nav class="navbar">
         <div class="navbar_container-logo">
-          <a href="#">
+          <a href="index.html">
             <img src="assets/img/Logo.svg" alt="Logo" />
           </a>
         </div>
-        
+  
         <ul class="navbar_lista">
-          <li><a href="#">Sobre nós</a></li>
-
+          <li><a href="sobrenos.html">Sobre nós</a></li>
+  
           <li><a href="./missao.html">Nossa missão</a></li>
-
+  
           <li><a href="./projeto.html">Nosso projeto</a></li>
-
-          <li><a href="#">Contato</a></li>
+  
+          <li><a href="contato.html">Contato</a></li>
         </ul>
-
+  
         <div class="navbar_container-redesSociais">
           <img src="assets/img/linkedin.svg" alt="Logo linkedin" />
-
+  
           <img src="assets/img/twitter.svg" alt="X" />
-
+  
           <img src="assets/img/youtube.svg" alt="Youtube" />
         </div>
       </nav>
