--- a/Site/index.html
+++ b/Site/index.html
@@ -13,24 +13,29 @@
 </head>
 <nav class="navbar">
     <div class="navbar_container-logo">
-        <a href="#">
-            <img src="assets/img/Logo.svg" alt="Logo">
-        </a>
+      <a href="index.html">
+        <img src="assets/img/Logo.svg" alt="Logo" />
+      </a>
     </div>
 
     <ul class="navbar_lista">
-        <li><a href="#">Sobre nós</a></li>
-        <li><a href="#">Nossa missão</a></li>
-        <li><a href="#">Nosso projeto</a></li>
-        <li><a href="#">Contato</a></li>
+      <li><a href="sobrenos.html">Sobre nós</a></li>
+
+      <li><a href="./missao.html">Nossa missão</a></li>
+
+      <li><a href="./projeto.html">Nosso projeto</a></li>
+
+      <li><a href="contato.html">Contato</a></li>
     </ul>
 
     <div class="navbar_container-redesSociais">
-        <img src="assets/img/linkedin.svg" alt="Logo linkedin">
-        <img src="assets/img/Vector (1).svg" alt="X">
-        <img src="assets/img/Vector (2).svg" alt="Youtube">
+      <img src="assets/img/linkedin.svg" alt="Logo linkedin" />
+
+      <img src="assets/img/twitter.svg" alt="X" />
+
+      <img src="assets/img/youtube.svg" alt="Youtube" />
     </div>
-</nav>
+  </nav>
 
 <body>
     <section class="tela-inicial">
