adicionandoo footer e alterando fotos

--- a/Site/index.html
+++ b/Site/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./assets/css/MenuNav.css">
     <link rel="stylesheet" href="./assets/css/index.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
@@ -57,7 +59,7 @@
 
             <div id="card">
                 <div id="card-image">
-                    <img src="https://img.freepik.com/fotos-gratis/pessoas-que-organizam-plantas-em-estufa_23-2147768535.jpg"
+                    <img src="/Site/assets/img/trabalho-em-equipe.webp"
                         alt="">
                 </div>
                 <div id="card-text">
@@ -73,7 +75,7 @@
             </div>
             <div id="card">
                 <div id="card-image">
-                    <img src="/assets/img/wasabi-em-estufa.jpg"
+                    <img src="/Site/assets/img/wasabi-em-estufa.jpg"
                         alt="">
                 </div>
                 <div id="card-text">
@@ -98,28 +100,28 @@
         <div class="container-card-ben">
             <div id="box">
                 <div id="image-box">
-                    <img src="/assets/img/sensor.png" alt="">
+                    <img src="/Site/assets/img/sensor.png" alt="">
                 </div>
                 <div id="text-box">Sensores, que coletam a todo momento a temperatura em °C.</div>
             </div>
 
             <div id="box">
                 <div id="image-box">
-                    <img src="/assets/img/grafico.png" alt="">
+                    <img src="/Site/assets/img/grafico.png" alt="">
                 </div>
                 <div id="text-box">Graficos que permitem ter uma melhor analise e tomar decisões.</div>
             </div>
 
             <div id="box">
                 <div id="image-box">
-                    <img src="/assets/img/alert.png" alt="">
+                    <img src="/Site/assets/img/alert.png" alt="">
                 </div>
                 <div id="text-box">Avisos e alertas, sobre a temperatura.</div>
             </div>
 
             <div id="box">
                 <div id="image-box">
-                    <img src="/assets/img/sifrao.png" alt="">
+                    <img src="/Site/assets/img/sifrao.png" alt="">
                 </div>
                 <div id="text-box">Calculadora financeira, para calcular o seu futuro lucro.</div>
             </div>
@@ -150,6 +152,19 @@
 
 
     </section>
+    <footer class="footer">
+        <div class="footer_verdeclaro"></div>
+  
+        <div class="content_footer">
+          <div class="logo_ondo">
+            <img src="assets/img/Logo ONDO footer.svg" alt="" />
+          </div>
+  
+          <div class="inf_center_footer">All rights reserved by ONDO</div>
+  
+          <div class="inf_right_footer">© 2024</div>
+        </div>
+      </footer>
 
 </body>
 
