--- a/Site/login.html
+++ b/Site/login.html
@@ -6,39 +6,199 @@
   <title>Login</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="./assets/css/login.css">
+  <style>
+    body {
+      font-family: Montserrat, sans-serif;
+      background-color: #ffffff;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      flex-direction: row;
+      gap: 0; 
+    }
+
+    .wrapper {
+      display: inline-flex;
+      align-items: stretch;
+      gap: 0; 
+      padding: 0;
+      margin: 0;
+    }
+
+    .container {
+      background-color: #294722;
+      color: #ffffff;
+      width: 350px;
+      padding: 20px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+    }
+
+    h2 {
+      font-size: 18px;
+      margin-bottom: 30px;
+      font-weight: bold;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-bottom: 15px;
+      background-color: transparent;
+      border: 2px solid #ffffff;
+      color: #ffffff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    button img {
+      width: 20px;
+    }
+
+    button:hover {
+      background-color: #ffffff;
+      color: #203920;
+    }
+
+    .or-divider {
+      display: flex;
+      align-items: center;
+      text-align: center;
+      margin: 20px 0;
+      width: 100%;
+    }
+
+    .or-divider hr {
+      flex: 1;
+      border-top: 1px solid #9fa2a7;
+    }
+
+    .or-divider span {
+      margin: 0 10px;
+      color: #9fa2a7;
+    }
+
+    .input-container {
+      display: flex;
+      align-items: center;
+    }
+
+    .input-container i {
+      color: #0A1F15;
+      margin-right: 10px;
+    }
+
+    input {
+      width: 95%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 2px solid #ffffff;
+      font-size: 16px;
+      box-sizing: border-box;
+      background-color: transparent;
+      color: #ffffff;
+      text-align: center;
+    }
+
+    input::placeholder {
+      color: #9fa2a7;
+    }
+
+    a {
+      color: black;
+      font-size: 14px;
+      display: block;
+      margin-bottom: 20px;
+    }
+
+    a:hover {
+      text-decoration: underline;
+      color: black;
+    }
+
+    button.login {
+      background-color: #192B16;
+      border: 2px solid #ffffff;
+      color: #ffffff;
+      font-size: 16px;
+      text-transform: uppercase;
+      width: 90%;
+    }
+
+    button.login:hover {
+      background-color: #ffffff;
+      color: #203920;
+    }
+
+    .image-container {
+      width: auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+      padding: 0;
+    }
+
+    .image-container img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </head>
 <body>
 
-  <div class="container">
-    <h2><b>BEM - VINDO, FAÇA SEU LOGIN ABAIXO!</b></h2>
+  <div class="wrapper">
+    <div class="container">
+      <h2><b>BEM - VINDO, FAÇA SEU LOGIN ABAIXO!</b></h2>
 
-    <button class="google">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt="Google Logo">
-      Fazer login com o Google
-    </button>
+      <button class="google">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt="Google Logo">
+        Fazer login com o Google
+      </button>
 
-    <button class="facebook">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook Logo">
-      Fazer login com o Facebook
-    </button>
+      <button class="facebook">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook Logo">
+        Fazer login com o Facebook
+      </button>
 
-    <div class="or-divider">
+      <div class="or-divider">
         <hr><span class="or-text"><b>ou</b></span><hr>
-    </div>    
+      </div>    
 
-    <div class="input-container">
-      <i class="fas fa-user"></i>
-      <input type="text" placeholder="E-mail ou nome de usuário">
+      <div class="input-container">
+        <i class="fas fa-user"></i>
+        <input type="text" placeholder="E-mail ou nome de usuário">
+      </div>
+
+      <div class="input-container">
+        <i class="fas fa-lock"></i>
+        <input type="password" placeholder="Senha">
+      </div>
+
+      <b><a href="#">Esqueceu sua senha?<span style="color: white;">Clique aqui.</span></b></a>
+
+      <button class="login">Entrar</button>
     </div>
 
-    <div class="input-container">
-      <i class="fas fa-lock"></i>
-      <input type="password" placeholder="Senha">
+    <div class="image-container">
+      <img src="./assets/images/img_login.png" alt="Imagem ao lado direito">
     </div>
-
-    <b><a href="#">Esqueceu sua senha?<span style="color: white;">Clique aqui.</span></b></a>
-
-    <button class="login">Entrar</button>
   </div>
 
 </body>
