Ajustes na tela de missao e no menu

--- a/Site/menu.html
+++ b/Site/menu.html
@@ -28,17 +28,28 @@
         <li><a href="contato.html">Contato</a></li>
       </ul>
 
-      <div class="navbar_container-redesSociais">
+      <div class="container">
+        <ul class="btn-acao">
+          <li class="btn_login">
+            <a href="#">Entrar</a>
+          </li>
+          <li class="btn_cadastro">
+            <a href="#">Cadastrar</a>
+          </li>
+        </ul>
+      </div>
+
+      <!-- <div class="navbar_container-redesSociais">
         <img src="assets/img/linkedin.svg" alt="Logo linkedin" />
 
         <img src="assets/img/twitter.svg" alt="X" />
 
         <img src="assets/img/youtube.svg" alt="Youtube" />
-      </div>
+      </div> -->
     </nav>
 
     <div class="banner">
-      <img src="assets/img/Imagem principal.svg" alt="" />
+      <img src="assets/img/#" alt="Colocar imagem" />
     </div>
   </header>
 </body>
