--- a/Site/menu.html
+++ b/Site/menu.html
@@ -28,7 +28,7 @@
         <li><a href="contato.html">Contato</a></li>
       </ul>
 
-      <div class="container">
+      <div class="container-btn">
         <ul class="btn-acao">
           <li class="btn_login">
             <a href="#">Entrar</a>
