--- a/Site/index.html
+++ b/Site/index.html
@@ -16,27 +16,27 @@
 </head>
 <!-- <nav class="navbar">
     <div class="navbar_container-logo">
-      <a href="index.html">
-        <img src="assets/img/Logo.svg" alt="Logo" />
-      </a>
+        <a href="index.html">
+            <img src="assets/img/Logo.svg" alt="Logo" />
+        </a>
     </div>
 
     <ul class="navbar_lista">
-      <li><a href="sobrenos.html">Sobre nós</a></li>
+        <li><a href="sobrenos.html">Sobre nós</a></li>
 
-      <li><a href="./missao.html">Nossa missão</a></li>
+        <li><a href="./missao.html">Nossa missão</a></li>
 
-      <li><a href="./projeto.html">Nosso projeto</a></li>
+        <li><a href="./projeto.html">Nosso projeto</a></li>
 
-      <li><a href="contato.html">Contato</a></li>
+        <li><a href="contato.html">Contato</a></li>
     </ul>
 
     <div class="navbar_container-redesSociais">
-      <img src="assets/img/linkedin.svg" alt="Logo linkedin" />
+        <img src="assets/img/linkedin.svg" alt="Logo linkedin" />
 
-      <img src="assets/img/twitter.svg" alt="X" />
+        <img src="assets/img/twitter.svg" alt="X" />
 
-      <img src="assets/img/youtube.svg" alt="Youtube" />
+        <img src="assets/img/youtube.svg" alt="Youtube" />
     </div>
   </nav> -->
 
@@ -97,8 +97,7 @@
 
             <div id="card">
                 <div id="card-image">
-                    <img src="/Site/assets/img/trabalho-em-equipe.webp"
-                        alt="">
+                    <img src="/Site/assets/img/trabalho-em-equipe.webp" alt="">
                 </div>
                 <div id="card-text">
                     <h3>Sobre a ONDO</h3>
@@ -113,8 +112,7 @@
             </div>
             <div id="card">
                 <div id="card-image">
-                    <img src="/Site/assets/img/wasabi-em-estufa.jpg"
-                        alt="">
+                    <img src="/Site/assets/img/wasabi-em-estufa.jpg" alt="">
                 </div>
                 <div id="card-text">
                     <h3>Nossa missão</h3>
@@ -178,9 +176,11 @@
             <div class="contato">Contato ONDO</div>
 
             <div class="container-social">
-                <div id="text-contato-1"><b>Para atendimento aos clientes</b> <br>ondoSAC@agro.com <br>+55 11 99999-9999</div>
+                <div id="text-contato-1"><b>Para atendimento aos clientes</b> <br>ondoSAC@agro.com <br>+55 11 99999-9999
+                </div>
 
-                <div id="text-contato-2"><b>Para comprar nosso sistema</b> <br>ondoVendas@agro.com <br>+55 11 99999-9999</div>
+                <div id="text-contato-2"><b>Para comprar nosso sistema</b> <br>ondoVendas@agro.com <br>+55 11 99999-9999
+                </div>
             </div>
 
             <div>
@@ -192,17 +192,17 @@
     </section>
     <footer class="footer">
         <div class="footer_verdeclaro"></div>
-  
+
         <div class="content_footer">
-          <div class="logo_ondo">
-            <img src="assets/img/Logo ONDO footer.svg" alt="" />
-          </div>
-  
-          <div class="inf_center_footer">All rights reserved by ONDO</div>
-  
-          <div class="inf_right_footer">© 2024</div>
+            <div class="logo_ondo">
+                <img src="assets/img/Logo ONDO footer.svg" alt="" />
+            </div>
+
+            <div class="inf_center_footer">All rights reserved by ONDO</div>
+
+            <div class="inf_right_footer">© 2024</div>
         </div>
-      </footer>
+    </footer>
 
 </body>
 
