removendo ambiguidade de nomes no css e removendo cores diferentes do body

--- a/Site/fale-conosco.html
+++ b/Site/fale-conosco.html
@@ -72,7 +72,7 @@
     <section class="contato-ondo">
         <div class="container-contatos">
             <h2> CONTATOS</h2>
-            <div class="card">
+            <div class="card-contato-ondo">
                 <div class="informacoes-contato">
                     <div class="caixa-contato">
                         <strong id="no-hover">Para atendimento aos clientes</strong><br><br>
