ajuste do menu em todas as telas

--- a/Site/index.html
+++ b/Site/index.html
@@ -39,7 +39,7 @@
                   <a href="./login.html">Entrar</a>
                 </li>
                 <li class="btn_cadastro">
-                  <a href="#">Cadastrar</a>
+                  <a href="./cadastro.html">Cadastrar</a>
                 </li>
               </ul>
             </div>
@@ -52,7 +52,6 @@
               <img src="assets/img/youtube.svg" alt="Youtube" />
             </div> -->
           </nav>
-
           <!-- <img src="./assets/img/Wasabi_Site_0.jpg" alt=""> -->
     </header>
     <section class="tela-inicial">
