--- a/Site/missao.html
+++ b/Site/missao.html
@@ -35,7 +35,7 @@
                   <a href="./login.html">Entrar</a>
                 </li>
                 <li class="btn_cadastro">
-                  <a href="#">Cadastrar</a>
+                  <a href="./cadastro.html">Cadastrar</a>
                 </li>
               </ul>
             </div>
