--- a/Site/fale-conosco.html
+++ b/Site/fale-conosco.html
@@ -41,7 +41,7 @@
             <a href="./login.html">Entrar</a>
           </li>
           <li class="btn_cadastro">
-            <a href="#">Cadastrar</a>
+            <a href="./cadastro.html">Cadastrar</a>
           </li>
         </ul>
       </div>
