--- a/Site/projeto.html
+++ b/Site/projeto.html
@@ -38,7 +38,7 @@
               <a href="./login.html">Entrar</a>
             </li>
             <li class="btn_cadastro">
-              <a href="#">Cadastrar</a>
+              <a href="./cadastro.html">Cadastrar</a>
             </li>
           </ul>
         </div>
