--- a/Site/projeto.html
+++ b/Site/projeto.html
@@ -63,17 +63,7 @@
 
         <div class="container_texto">
           <span>
-            Nosso projeto será implementado dentro da estufa de wasabi, ele
-            estará coletando a temperatura a todo momento, e fará um trabalho
-            com esses dados, para gerar as informações. Com essa informação o
-            nosso cliente poderá tomar decisões acertivas para gerenciar a
-            temperatura do ambiente. Utilizamos
-            <b>Sensores de Temperatura</b> para gerar esses
-            <b>Dados e Graficos</b>.Alem de gerar <b>avisos e notificações</b>,
-            como se a temperatura está boa ou ruim. E temos uma
-            <b>Calculadora para simular lucro</b>.
-
-            <!-- Nosso projeto será implantado dentro da estufa de wasabi, onde coletará dados de temperatura continuamente. Com base nesses dados, geraremos informações relevantes. Essas informações permitirão que nosso cliente tome decisões assertivas para o gerenciamento da temperatura do ambiente. Utilizamos sensores de temperatura para coletar esses dados e criar gráficos informativos. Além disso, nosso sistema gera avisos e notificações, indicando se a temperatura está dentro dos parâmetros desejados. Também desenvolvemos uma calculadora para simular o lucro relacionado ao cultivo de wasabi. -->
+            Nosso projeto é implantado dentro da estufa de wasabi, onde coletará dados de temperatura continuamente. Essas informações permitirão que nosso cliente tome decisões assertivas para o gerenciamento da temperatura do ambiente. Utilizamos sensores de temperatura para coletar esses dados e criar gráficos informativos. Nosso sistema gera avisos e notificações, indicando se a temperatura está dentro dos parâmetros desejados. Será disponibilizado também uma calculadora para simular o lucro relacionado ao cultivo de wasabi.
           </span>
         </div>
       </div>
