--- a/Site/login.html
+++ b/Site/login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="stylesheet" href="./login.css">
+  <link rel="stylesheet" href="assets/css/login.css">
 
 </head>
 <body>
@@ -44,7 +44,7 @@
     </div>
 
     <div class="image-container">
-      <img src="img src="./assets/img/img_login.png" alt="Imagem ao lado direito>
+      <img src="assets/img/img_login.png" alt="Imagem ao lado direito"/>
     </div>
   </div>
 
