Ajustes no menu e correção de textos

--- a/repo-sprint2/site/calculadora.html
+++ b/repo-sprint2/site/calculadora.html
@@ -53,11 +53,11 @@
     <div class="div_conteudo">
         <div class="div_calculadora">
             <div class="container_input">
-                <span class="title_input">Espaco da plantação (m²):</span>
+                <span class="title_input">Espaço da plantação (m²):</span>
                 <input placeholder="Digite o espaco da plantação" type="number" id="input_area">
             </div>
             <div class="container_input">
-                <span class="title_input">espaco entre as planta (cm): </span>
+                <span class="title_input">Espaço entre as planta (cm): </span>
                 <input placeholder="Digite o espaco entre as plantas" type="number" id="input_espaco">
             </div>
             <div class="container_input">
