--- a/repo-sprint2/site/menu.html
+++ b/repo-sprint2/site/menu.html
@@ -21,6 +21,8 @@
       <ul class="navbar_lista">
         <li><a href="./sobrenos.html">Sobre nós</a></li>
 
+        <li><a href="./calculadora.html">Simulador Financeiro</a></li>
+
         <li><a href="./missao.html">Nossa missão</a></li>
 
         <li><a href="./projeto.html">Nosso projeto</a></li>
