--- a/repo-sprint2/site/projeto.html
+++ b/repo-sprint2/site/projeto.html
@@ -25,6 +25,8 @@
         <ul class="navbar_lista">
           <li><a href="./sobrenos.html">Sobre nós</a></li>
   
+          <li><a href="./calculadora.html">Simulador Financeiro</a></li>
+  
           <li><a href="./missao.html">Nossa missão</a></li>
   
           <li><a href="./projeto.html">Nosso projeto</a></li>
@@ -51,7 +53,6 @@
           <img src="assets/img/youtube.svg" alt="Youtube" />
         </div> -->
       </nav>
-
       <div class="banner">
         <img src="assets/img/Imagem principal.svg" alt="" />
       </div>
