alterando o caminho da imagem da tela

--- a/repo-sprint2/site/sobre-ondo.html
+++ b/repo-sprint2/site/sobre-ondo.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre a ONDO</title>
-    <link rel="stylesheet" href="/assets/css/sobre-ondo.css">
+    <link rel="stylesheet" href="./assets/css/sobre-ondo.css">
     <link rel="stylesheet" href="./assets/css/MenuNav.css">
     <link rel="stylesheet" href="./assets/css/index.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
 </head>
 
 <body>
@@ -49,7 +47,7 @@
     </header>
 
     <section class="equipe">
-        <img src="/assets/img/image.png" alt="Equipe ONDO" class="foto-equipe">
+        <img src="./assets/img/equipe-ondo.png" alt="Equipe ONDO" id="sobre-nos-equipe-ondo">
     </section>
 
     <section class="sobre">
@@ -61,7 +59,7 @@
                 qualquer projeto, foi então que criaram a ONDO!Uma empresa de tecnologia voltada a agricultura e
                 cultivo, especializada em desenvolver e implementar soluções inovadoras para o cultivo de wasabi
                 Focando no monitoramento da temperatura e trazer dados que te ajude a tomar as melhores decições e
-                administrar melhor sua plantaçao.
+                administrar melhor sua plantação.
             </p>
             <p id="paragrafo-sobre">
                 Acreditamos que trilhando um caminho e facilitando o controle de temperatura facilitamos o cultivo, e
@@ -70,7 +68,7 @@
             </p>
             <p id="paragrafo-sobre">
                 Temos uma equipe esforçada e totalmente dedicada aos nossos clientes e que estão dia e noite,
-                trabalhando para trazer o melhor para voce! Não fique para traz, coloque o sistema de controle ONDO em
+                trabalhando para trazer o melhor para voce! Não fique para trás, coloque o sistema de controle ONDO em
                 sua plantação de wasabi!
             </p>
         </div>
