--- a/repo-sprint2/site/login.html
+++ b/repo-sprint2/site/login.html
@@ -1,52 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="assets/css/login.css">
 
 </head>
+
 <body>
 
   <div class="wrapper">
     <div class="container">
-      <h2><b>BEM - VINDO, FAÇA SEU LOGIN ABAIXO!</b></h2>
+      <div class="login">
+        <a href="#">
+          <img class="img_btn_voltar" src="assets/img/btn_voltar.png" alt="btn voltar">
+        </a>
+        <h2 class="txt_login"><b>BEM - VINDO, FAÇA SEU LOGIN ABAIXO!</b></h2>
+      
+        <button class="btn_login">
+          <img class="img_btn" src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt="Google Logo">
+          Fazer login com o Google
+        </button>
 
-      <button class="google">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt="Google Logo">
-        Fazer login com o Google
-      </button>
+        <button class="btn_login">
+          <img class="img_btn" src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
+            alt="Facebook Logo">
+          Fazer login com o Facebook
+        </button>
 
-      <button class="facebook">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook Logo">
-        Fazer login com o Facebook
-      </button>
+        <div class="or-divider">
+          <hr>
+          <span class="or-text"><b>ou</b></span>
+          <hr>
+        </div>
 
-      <div class="or-divider">
-        <hr><span class="or-text"><b>ou</b></span><hr>
-      </div>    
+        <label class="ipt-container">
+          <img src="assets/img/personal.png" alt="">
+          <input type="text" placeholder="E-mail ou nome de usuário">
+        </label>
 
-      <div class="input-container">
-        <i class="fas fa-user"></i>
-        <input type="text" placeholder="E-mail ou nome de usuário">
+        <div class="ipt-container">
+          <img src="assets/img/personal.png" alt="">
+          <input type="password" placeholder="Senha">
+        </div>
+
+        <a class="texSenha" href="#">Esqueceu sua senha?<span class="texSpan"> Clique aqui.</span></a>
+        <div class="container-btn">
+          <button class="btn_entrar">Entrar</button>
+        </div>
+
+        <div class="img_logo_ondo"></div>
       </div>
-
-      <div class="input-container">
-        <i class="fas fa-lock"></i>
-        <input type="password" placeholder="Senha">
-      </div>
-
-      <a href="#">Esqueceu sua senha?Clique aqui. <span style="color: rgb(255, 255, 255);"></span></a>
-
-      <button class="login">Entrar</button>
+      <div class="image-wasabi"></div>
     </div>
 
-    <div class="image-container">
-      <img src="assets/img/img_login.png" alt="Imagem ao lado direito"/>
-    </div>
   </div>
 
 </body>
+
 </html>
