add btn de voltar

--- a/repo-sprint2/site/login.html
+++ b/repo-sprint2/site/login.html
@@ -14,7 +14,7 @@
   <div class="wrapper">
     <div class="container">
       <div class="login">
-        <a href="#">
+        <a href="index.html">
           <img class="img_btn_voltar" src="assets/img/btn_voltar.png" alt="btn voltar">
         </a>
         <h2 class="txt_login"><b>BEM - VINDO, FAÇA SEU LOGIN ABAIXO!</b></h2>
