--- a/repo-sprint2/site/projeto.html
+++ b/repo-sprint2/site/projeto.html
@@ -23,7 +23,7 @@
         </div>
   
         <ul class="navbar_lista">
-          <li><a href="./sobrenos.html">Sobre nós</a></li>
+          <li><a href="./sobre-ondo.html">Sobre nós</a></li>
   
           <li><a href="./calculadora.html">Simulador Financeiro</a></li>
   
