arrumado os textos dos login

--- a/repo-sprint2/site/login.html
+++ b/repo-sprint2/site/login.html
@@ -21,13 +21,13 @@
       
         <button class="btn_login">
           <img class="img_btn" src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt="Google Logo">
-          Fazer login com o Google
+          <span class="textLogin">Fazer login com o Google</span>
         </button>
 
         <button class="btn_login">
           <img class="img_btn" src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
             alt="Facebook Logo">
-          Fazer login com o Facebook
+            <span class="textLogin">Fazer login com o Facebook</span>
         </button>
 
         <div class="or-divider">
